- email notification setup - addition of email templates for both user creation and email verification. - addition of email sender function for both email templates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+
+#mail setting
+interview.mail.host=smtp.mailtrap.io
+interview.mail.port= 2525
+interview.mail.username=623ca8f8273dca
+interview.mail.password=e30501b410028a
+interview.mail.debug=true
+
+base.url = http://localhost:8000
