- bug fixes. - addition of employment and educational history. - candidate registration, fetch and delete fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.web.resources.add-mappings=false
 #mail setting
 interview.mail.host=smtp.mailtrap.io
 interview.mail.port= 2525
-interview.mail.username=623ca8f8273dca
-interview.mail.password=e30501b410028a
+interview.mail.username=302db4be264bdd
+interview.mail.password=15f8c2c44eecf1
 interview.mail.debug=true
 
 base.url = http://localhost:8000
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
