--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.url=jdbc:mysql://localhost/interview-io
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=macbookair
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.throw-exception-if-no-handler-found=true
@@ -14,8 +14,8 @@ spring.web.resources.add-mappings=false
 #mail setting
 interview.mail.host=smtp.mailtrap.io
 interview.mail.port= 2525
-interview.mail.username=302db4be264bdd
-interview.mail.password=15f8c2c44eecf1
+interview.mail.username=8c57db82b0bf3a
+interview.mail.password=530dc37c663449
 interview.mail.debug=true
 
 base.url = http://localhost:8000
