--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ interview.mail.debug=true
 
 base.url = http://localhost:8000
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+#elastic config
+spring.data.elasticsearch.cluster-name=${CLUSTER_NAME:mycluster}
+spring.data.elasticsearch.cluster-nodes=${CLUSTER_NODES:localhost:9200}
+spring.data.elasticsearch.repositories.enabled=true
+
+api.elasticsearch.uri = http://${CLUSTER_NAME:localhost}:9200/
+api.elasticsearch.search = _search
