--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
+!**/src/main/resources/es
 !**/src/test/**/target/
 
 ### STS ###
@@ -31,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
